content/media/AudioMixer.h
@@ -14,7 +14,8 @@ namespace mozilla {
 typedef void(*MixerFunc)(AudioDataValue* aMixedBuffer,
                          AudioSampleFormat aFormat,
                          uint32_t aChannels,
-                         uint32_t aFrames);
+                         uint32_t aFrames,
+                         uint32_t aSampleRate);
 
 /**
  * This class mixes multiple streams of audio together to output a single audio
@@ -34,7 +35,8 @@ public:
   AudioMixer(MixerFunc aCallback)
     : mCallback(aCallback),
       mFrames(0),
-      mChannels(0)
+      mChannels(0),
+      mSampleRate(0)
   { }
 
   /* Get the data from the mixer. This is supposed to be called when all the
@@ -43,21 +45,27 @@ public:
     mCallback(mMixedAudio.Elements(),
               AudioSampleTypeToFormat<AudioDataValue>::Format,
               mChannels,
-              mFrames);
+              mFrames,
+              mSampleRate);
     PodZero(mMixedAudio.Elements(), mMixedAudio.Length());
-    mChannels = mFrames = 0;
+    mSampleRate = mChannels = mFrames = 0;
   }
 
   /* Add a buffer to the mix. aSamples is interleaved. */
-  void Mix(AudioDataValue* aSamples, uint32_t aChannels, uint32_t aFrames) {
+  void Mix(AudioDataValue* aSamples,
+           uint32_t aChannels,
+           uint32_t aFrames,
+           uint32_t aSampleRate) {
     if (!mFrames && !mChannels) {
       mFrames = aFrames;
       mChannels = aChannels;
+      mSampleRate = aSampleRate;
       EnsureCapacityAndSilence();
     }
 
     MOZ_ASSERT(aFrames == mFrames);
     MOZ_ASSERT(aChannels == mChannels);
+    MOZ_ASSERT(aSampleRate == mSampleRate);
 
     for (uint32_t i = 0; i < aFrames * aChannels; i++) {
       mMixedAudio[i] += aSamples[i];
@@ -77,6 +85,8 @@ private:
   uint32_t mFrames;
   /* Number of channels for this mixing block. */
   uint32_t mChannels;
+  /* Sample rate the of the mixed data. */
+  uint32_t mSampleRate;
   /* Buffer containing the mixed audio data. */
   nsTArray<AudioDataValue> mMixedAudio;
 };
